[package]
name = "bls_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Radix Engine deps
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "74150e5590043d446ff19290d0fc34321c96d788", features = ["serde"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "74150e5590043d446ff19290d0fc34321c96d788" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "74150e5590043d446ff19290d0fc34321c96d788" }

# CLI
clap = { version = "4.4.11", features = ["derive"] }
# To communicate with gateway via HTTP REST API
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
hex = { version = "0.4.3" }
