[package]
name = "bls_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Radix Engine deps
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "anemone-e212f2ea", features = ["serde"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "anemone-e212f2ea" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "anemone-e212f2ea" }

# CLI
clap = { version = "4.4.11", features = ["derive"] }
# To communicate with gateway via HTTP REST API
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
hex = { version = "0.4.3" }
